docs: Actualización de la Estructura del Proyecto y Configuración de Ejecución (Surefire)