@@ -1,15 +1,15 @@
 # **javatest**
 
 ![Java](https://img.shields.io/badge/Java-25%2B-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white)
-![Maven](https://img.shields.io/badge/Apache%20Maven-3.2.5-C71A36?style=for-the-badge&logo=apache-maven&logoColor=white)
-![JUnit 5](https://img.shields.io/badge/JUnit-5.12.2-25A162?style=for-the-badge&logo=junit5&logoColor=white)
+![Maven](https://img.shields.io/badge/Apache%20Maven-3.5.4-C71A36?style=for-the-badge&logo=apache-maven&logoColor=white)
+![JUnit 5](https://img.shields.io/badge/JUnit-5.13.4-25A162?style=for-the-badge&logo=junit5&logoColor=white)
 ![License](https://img.shields.io/badge/License-MIT-blue.svg?style=for-the-badge)
-![Mockito](https://img.shields.io/badge/Mockito-5.20.0-6bba46?style=for-the-badge&logo=mockito&logoColor=white)
+![Mockito](https://img.shields.io/badge/Mockito-5.21.0-6bba46?style=for-the-badge&logo=mockito&logoColor=white)
 ![H2](https://img.shields.io/badge/H2_Database-004B8D?style=for-the-badge&logo=sqlite&logoColor=white)
 ![Spring](https://img.shields.io/badge/Spring_JDBC-6DB33F?style=for-the-badge&logo=spring&logoColor=white)
 ![Tests](https://img.shields.io/badge/Tests-100%25%20Passed-brightgreen?style=for-the-badge&logo=checkmarx&logoColor=white)
 ![Build Status](https://img.shields.io/github/actions/workflow/status/luiscacuango2/JavaTest/maven.yml?style=for-the-badge&logo=github&label=CI%20Build)
-![Java CI](https://github.com/luiscacuango2/javatest/actions/workflows/maven.yml/badge.svg?branch=master)
+![Java CI](https://github.com/luiscacuango2/javatest/actions/workflows/maven.yml/badge.svg)
 
 ## **Descripción**
 Este repositorio es un ecosistema de aprendizaje y desarrollo en Java. Contiene implementaciones de algoritmos clásicos, gestión de lógica de negocio y pruebas de integración, sirviendo como base sólida para despliegue de componentes escalables.
@@ -51,7 +51,7 @@ Para asegurar la robustez del sistema, empleamos una **pirámide de pruebas** eq
 
 ### **Stack Técnico**
 * **Lenguaje:** Java 25 (utilizando las últimas funciones de la JVM).
-* **Build Tool:** Maven 3.8.7+.
+* **Build Tool:** Maven 3.5.4+.
 * **Testing:** JUnit 5 (Jupiter) & Mockito 5.
 * **IDE:** `IntelliJ IDEA 2025.2.5`.
 
@@ -73,21 +73,45 @@ Para asegurar la robustez del sistema, empleamos una **pirámide de pruebas** eq
     ```
 > **Nota técnica (Java 25):** Para evitar advertencias de carga dinámica durante los tests, el proyecto está configurado para habilitar `-XX:+EnableDynamicAgentLoading` en el entorno de pruebas.
 
-### **Estructura del proyecto**
-```
+### **Estructura del Proyecto**
+
+El proyecto sigue una arquitectura modular y por capas (Interfaz, Negocio y Datos), organizada de la siguiente manera:
+
+```text
 javatest/
-├── src/main/java/         # Lógica de negocio (Utilidades, Pagos, etc.)
-├── src/main/resources/    # Configuraciones (application.properties)
-├── src/test/java/         # Suites de JUnit 5 y configuraciones de Mockito
-└── pom.xml                # Gestión de dependencias y plugins de compilación
+├── src/
+│   ├── main/
+│   │   ├── java/com/luigi/javatest/
+│   │   │   ├── discounts/      # Lógica para gestión de descuentos
+│   │   │   ├── movies/         # Dominio principal de Películas
+│   │   │   │   ├── data/       # Capa de Datos (Repositorios con JdbcTemplate)
+│   │   │   │   ├── model/      # Entidades y modelos de datos (POJOs)
+│   │   │   │   └── service/    # Capa de Negocio (Lógica de filtrado y búsqueda)
+│   │   │   ├── payments/       # Simulación de pasarela de pagos
+│   │   │   ├── player/         # Lógica del reproductor
+│   │   │   └── util/           # Clases de utilidad generales
+│   │   └── resources/
+│   │       └── sql-scripts/    # Scripts SQL para inicialización y pruebas
+│   │           └── test-data.sql
+│   └── test/
+│       └── java/com/luigi/javatest/ # Espejo de src/main para pruebas unitarias e integración
+├── pom.xml                     # Configuración de Maven y dependencias
+└── README.md                   # Documentación del proyecto
 ```
 ### **Dependencias**
 
-- **org.mockito:mockito-core:5.20.0** (scope: `test`)  
-  Biblioteca para crear mocks y stubs en pruebas. En este `pom.xml` además se referencia como `-javaagent` en la configuración de `maven-surefire-plugin` (revisa la ruta si hay problemas).
+- **org.mockito:mockito-core:5.21.0** (scope: `test`)
+  Biblioteca principal para crear mocks y stubs en pruebas. Se utiliza junto con **mockito-junit-jupiter** (5.21.0) para una integración fluida con JUnit 5.
+  *Nota técnica:* Para Java 25+, se ha configurado el `javaagent` y la flag `-XX:+EnableDynamicAgentLoading` en el `maven-surefire-plugin` para permitir la carga dinámica de Mockito.
 
-- **org.junit.jupiter:junit-jupiter:5.12.2** (scope: `test`)  
-  JUnit 5 (Jupiter) — API moderna para pruebas. Para ejecutarlo correctamente se recomienda usar `maven-surefire-plugin` versión compatible (ya configurado en el `pom.xml`).
+- **org.junit.jupiter:junit-jupiter:5.13.4** (scope: `test`)
+  JUnit 5 (Jupiter) — API moderna para pruebas. La versión se gestiona centralizadamente mediante el `junit-bom` (5.13.4) definido en la sección `dependencyManagement`.
+
+- **org.springframework:spring-jdbc:6.2.11**
+  Proporciona utilidades como `JdbcTemplate` para simplificar las operaciones con la base de datos y el mapeo de resultados.
+
+- **com.h2database:h2:2.4.240**
+  Base de datos SQL en memoria, utilizada para ejecutar tests de integración rápidos sin necesidad de un servidor de base de datos externo.
 
 ---
 
@@ -104,7 +128,26 @@ javatest/
 * **Seguridad:** Monitoreo y escaneo automático de vulnerabilidades en dependencias mediante **Dependabot**.
 
 ---
+### **Configuración de Ejecución (Surefire)**
 
+El proyecto utiliza **maven-surefire-plugin (3.5.4)** con una configuración personalizada para soportar las últimas características de la JVM:
+
+1. **Patrones de nombres:** Se ejecutan automáticamente los archivos que terminan en:
+    - `*Test.java`
+    - `*Should.java` (estilo BDD).
+
+2. **JVM Arguments:**
+    - `-XX:+EnableDynamicAgentLoading`: Necesario en versiones modernas de Java para que Mockito pueda interceptar llamadas.
+    - `-javaagent`: Apunta directamente al jar de Mockito en el repositorio local para asegurar su inicialización.
+---
+
+### **Cómo ejecutar los tests**
+
+Para ejecutar todas las pruebas desde la terminal, usa:
+   ```bash
+   mvn test
+   ```
+---
 ### **Contribuciones y Licencia**
 ¡Las contribuciones son lo que hacen a la comunidad increíble! Si deseas colaborar, sigue estos pasos:
 
